crates/solite-fmt/src/snapshots/solite_fmt__tests__bind_parameters.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select * from t where a = ? and b = ?1 and c = :name and d = @var and e = $param

-- Output:
select *
from t
where a = ?
  and b = ?1
  and c = :name
  and d = @var
  and e = $param;
