crates/solite-fmt/src/snapshots/solite_fmt__tests__bitwise_operators.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select a & b, c | d, e << 2, f >> 1, ~g from t

-- Output:
select
  a & b,
  c | d,
  e << 2,
  f >> 1,
  ~g
from t;
