crates/solite-fmt/src/snapshots/solite_fmt__tests__blob_literal.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select X'DEADBEEF' from t

-- Output:
select X'DEADBEEF' from t;
