crates/solite-fmt/src/snapshots/solite_fmt__tests__block_comment.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- /* block comment */ select a from t

-- Output:
/* block comment */
select a from t;
