crates/solite-fmt/src/snapshots/solite_fmt__tests__block_comment_before_statement.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- /* This is a
--    multi-line
--    block comment */
-- select * from t

-- Output:
/* This is a
   multi-line
   block comment */
select * from t;
