crates/solite-fmt/src/snapshots/solite_fmt__tests__collate_expression.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select name collate nocase from t order by name collate nocase

-- Output:
select name collate nocase
from t
order by name collate nocase;
