crates/solite-fmt/src/snapshots/solite_fmt__tests__comment_before_first_statement.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- -- header comment
-- select * from t

-- Output:
-- header comment
select * from t;
