crates/solite-fmt/src/snapshots/solite_fmt__tests__comment_between_statements.snap
---
source: crates/solite-fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select a from t;
-- -- comment between statements
-- select b from u

-- Output:
select a from t;

-- comment between statements
select b from u;
