crates/solite-fmt/src/snapshots/solite_fmt__tests__comment_blank_line_then_select.snap
---
source: crates/solite-fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- -- a comment
-- 
-- select * from queue2;

-- Output:
-- a comment
select * from queue2;
